--- a/css/styles.css
+++ b/css/styles.css
@@ -105,3 +105,4 @@ body{
   transform: scale(1.1);
   box-shadow: 1px -9px 287px -4px rgba(0,0,0,0.75);
 }
+/* -------------------------- /GALLERY STYLES  -------------------------- */
